# campAssistant

./: .env.example  .gitignore  ARCHITECTURE.md  MANUAL_UI_SCENARIOS.md  README.md  SUBMISSION_CHECKLIST.md  agent.py  agent_langchain.py  agent_langgraph.py  agent_state.py  confirmation.py  db_store.py  guardrails.py  mock_db.json  pyproject.toml  tool_helpers.py  tool_result.py  tool_schemas.py
tests/: conftest.py  test_agent_state.py  test_confirmation.py  test_guardrails.py  test_tool_layer.py
tests/e2e/: conftest.py  instrumentation.py  scenarios.py  scripted_llm.py  test_agent_e2e.py  test_agent_e2e_live.py
